<resources>
    <string name="app_name">LPTT_Benz</string>
    <string name="log_in">Log in</string>
    <string name="scan_the_job_card_first">Scan the job card first</string>
    <string name="local_production_no">Local production no.</string>
    <string name="search_prod_no">Search Prod. No.</string>
    <string name="prod_code">ProdCode</string>
    <string name="wheel_alignment">Wheel Alignment</string>
    <string name="would_to_continue">Would to continue ?</string>
    <string name="cancel">Cancel</string>
    <string name="would_to_do">Would to do ?</string>
    <string name="transfer">Transfer</string>
    <string name="in_progress">In progress</string>
    <string name="current_area">CurrentArea</string>
    <string name="n_i_o">n.I.O.</string>
    <string name="i_o">I.O.</string>
    <string name="n_i_o_question">n.I.O.?</string>
    <string name="wa_to_rectification">WA to Rectification</string>
    <string name="confirm">Confirm</string>
    <string name="done_transfer">Done / Transfer</string>
    <string name="select_next_location">Select next location</string>
    <string name="end_of_line">End Of Line</string>
    <string name="select_parking_lot">Select parking lot</string>
    <string name="parking_zone">ParkingZone</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="forth">Forth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="parking_lot">KA</string>
    <string name="book_the_car_in_number">Book the car in number</string>
    <string name="yes">Yes</string>
    <string name="zone">Zone</string>
    <string name="this_area">ThisArea</string>
    <string name="search">Search</string>
    <string name="product_id">Product id</string>
    <string name="location">Location</string>
    <string name="what_is_progress">What is progress ?</string>
    <string name="ok">OK</string>
    <string name="location2location">Location2Location</string>
    <string name="shower_test">Shower Test</string>
    <string name="fault_information">fault information</string>
    <string name="status">Status</string>
    <string name="pa_voca">PA/VoCA</string>
    <string name="register">Register</string>
    <string name="progress_information">Progress information</string>
    <string name="mechanic">Mech</string>
    <string name="electic">EE</string>
    <string name="finish_line">Finish Line</string>
    <string name="stay_location">STAY LOCATION</string>
    <string name="scan_location_code">Scan\t\tlocation\t\tcode</string>
    <string name="attr_title">AttrTitle</string>
    <string name="attr_detail">AttrDetail</string>
    <string name="model_code">ModelCode</string>
    <string name="search_product_here">Search product here</string>
    <string name="rectification">Rectification</string>
    <string name="fqg">FQG</string>
    <string name="wsa">WSA</string>
    <string name="pre_buy_off">Pre-buy off</string>
</resources>
