<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEOLExitThisLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEOLExitProductID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/prod_code"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEOLExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="38dp"
                android:text="@string/end_of_line"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size" />

            <TextView
                android:id="@+id/tvEOLExitProdStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/what_is_progress"
                android:textColor="@color/black"
                android:textSize="@dimen/small_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEOLExitNIO"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/light_red"
                    android:text="@string/n_i_o"
                    android:textAllCaps="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnEOLExitIO"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:background="@color/light_green"
                    android:text="@string/i_o"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>