<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="@drawable/curve_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/would_to_do"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_size" />

        <Button
            android:id="@+id/btnRGCancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_common_selector"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_size" />

        <Button
            android:id="@+id/btnRGTransfer"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_common_selector"
            android:text="@string/transfer"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_size" />

        <Button
            android:id="@+id/btnRGRegister"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_common_selector"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_size" />
    </LinearLayout>

</LinearLayout>