<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <com.withcheese.lptt_benz.view.ThisProcessItem
        android:id="@+id/itemProcessRect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRectification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rectification"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

        <TextView
            android:id="@+id/tvRectProductStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/would_to_continue"
                android:textColor="@color/black"
                android:textSize="@dimen/small_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnRectCancel"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_common_selector"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_size" />


                <Button
                    android:id="@+id/btnRectRegister"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_common_selector"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_size" />

                <Button
                    android:id="@+id/btnRectTransfer"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_common_selector"
                    android:text="@string/transfer"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>