<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <com.withcheese.lptt_benz.view.ThisProcessItem
        android:layout_width="match_parent"
        android:id="@+id/itemProcessFLExit"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFLExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:text="@string/finish_line"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

        <TextView
            android:id="@+id/tvFLExitProductStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/would_to_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/small_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnFLExitIo"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/light_green"
                    android:text="@string/i_o"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_size" />

                <Button
                    android:paddingTop="5dp"
                    android:id="@+id/btnFLExitPaVoCa"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/light_green"
                    android:text="@string/pa_voca"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_size" />
            </LinearLayout>

            <Button
                android:id="@+id/btnFLExitNio"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@color/light_red"
                android:text="@string/n_i_o"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/small_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>