<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/light_gray"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.withcheese.lptt_benz.view.ThisProcessItem
        android:id="@+id/itemProcessFLEnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFLEnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:text="@string/finish_line"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

        <TextView
            android:id="@+id/tvFLEntProductStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/would_to_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/small_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFLEntCancel"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_common_selector"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_size" />

            <Button
                android:id="@+id/btnFLEntConfirm"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_common_selector"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>